--- a/ace-core/pom.xml
+++ b/ace-core/pom.xml
@@ -23,5 +23,9 @@
   		<groupId>joda-time</groupId>
   		<artifactId>joda-time</artifactId>
   	</dependency>
+  	<dependency>
+  		<groupId>com.google.guava</groupId>
+  		<artifactId>guava</artifactId>
+  	</dependency>
   </dependencies>
 </project>
