--- a/ace-core/pom.xml
+++ b/ace-core/pom.xml
@@ -27,5 +27,10 @@
   		<groupId>com.google.guava</groupId>
   		<artifactId>guava</artifactId>
   	</dependency>
+  	<dependency>
+  		<groupId>org.agmip.ace</groupId>
+  		<artifactId>ace-lookup</artifactId>
+  		<version>2.0-SNAPSHOT</version>
+  	</dependency>
   </dependencies>
 </project>
